Add ECCV 2024 PDCL-Attack

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,16 @@
 
 
 # Selected Papers
+@inproceedings{Yang_2024_ECCV,
+  author    = {Hunmin Yang and Jongoh Jeong and Kuk-Jin Yoon},
+  title     = {Prompt-Driven Contrastive Learning for Transferable Adversarial Attacks},
+  booktitle = eccv,
+  year      = {2024},
+  abbr={ECCV},
+  selected={true},
+  img_path={assets/img/pdcl.png},
+}
+
 @InProceedings{Cho_2024_arxiv,
   author    = {Junhyeong Cho and Kim Youwang and Hunmin Yang and Tae-Hyun Oh},
   title     = {Object-Centric Domain Randomization for 3D Shape Reconstruction in the Wild},
