--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,13 +16,15 @@
 
 
 # Selected Papers
-@inproceedings{Yang_2024_ECCV,
+@inproceedings{yang2024PDCLAttack,
   author    = {Hunmin Yang and Jongoh Jeong and Kuk-Jin Yoon},
   title     = {Prompt-Driven Contrastive Learning for Transferable Adversarial Attacks},
   booktitle = eccv,
   year      = {2024},
   abbr={ECCV},
   selected={true},
+  paper={https://arxiv.org/abs/2407.20657},
+  website={https://pdcl-attack.github.io/},
   img_path={assets/img/pdcl.png},
 }
 
@@ -46,7 +48,8 @@
   year      = {2024},
   abbr={AAAI},
   selected={true},
-  paper={https://ojs.aaai.org/index.php/AAAI/article/view/28470/28915},
+  paper={https://arxiv.org/abs/2407.20653},
+  website={https://facl-attack.github.io/},
   additional_info2={ICCV Workshop on Adversarial Robustness In the Real World (AROW), 2023},
   img_path={assets/img/facl.png},
   equal_contrib={true}
