Update PDCL-Attack as Oral

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,6 +26,7 @@
   paper={https://arxiv.org/abs/2407.20657},
   website={https://pdcl-attack.github.io/},
   img_path={assets/img/pdcl.png},
+  additional_info={Oral Presentation},
 }
 
 @InProceedings{Cho_2024_arxiv,
